# umls_downloader

./: .bumpversion.cfg  .flake8  .readthedocs.yml  CONTRIBUTING.rst  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
src/umls_downloader/: __init__.py  __main__.py  api.py  cli.py  rxnorm.py  semmeddb.py  snomed.py  umls.py  version.py
tests/: __init__.py  test_version.py
